# PumpBoard_Controller

./: CMAKE_BUILD_GUIDE.md  CMakeLists.txt  KEIL_SIMULATOR_SETUP.md  MCUVIEWER_SETUP_GUIDE.md  PumpBoard_PID_Monitor.mcuvproj  README_CMAKE.md  SIMULATOR_LEARNING_GUIDE.md  STM32F407ZE_FLASH.ld  STM32_CUBEIDE_SETUP_GUIDE.md  arm-none-eabi-gcc.cmake  build.sh  mcuviewer_variables.txt
PumpBoard_Car_PPQ1_Single_V0.0.0.2_2025.10.27/: CAN_INTEGRATION_INSTRUCTIONS.md  CAN_PROTOCOL_REFERENCE.md  MAIN_C_MODIFICATIONS.txt  STM32F4XX_IT_C_MODIFICATIONS.txt
PumpBoard_Car_PPQ1_Single_V0.0.0.2_2025.10.27/CORE/: core_cm4.h  core_cmFunc.h  startup_stm32f407xx_gcc.S  stm32f4xx.h  system_stm32f4xx.c
PumpBoard_Car_PPQ1_Single_V0.0.0.2_2025.10.27/Docs_files/: CAN_ARCHITECTURE_DIAGRAM.txt  CAN_IMPLEMENTATION_SUMMARY.md  CODE_MAP.txt  DRIVER_C_MODIFICATIONS.txt  LEARNING_PATH.md  QUICK_REFERENCE.txt  TASK_C_MODIFICATIONS.txt
PumpBoard_Car_PPQ1_Single_V0.0.0.2_2025.10.27/Docs_files/bat_files/: debug_session.bat  restore_main.bat  test_build.bat
PumpBoard_Car_PPQ1_Single_V0.0.0.2_2025.10.27/Docs_files/extra/: .clangd  PumpCtrl.cbuild-idx.yml  PumpCtrl.cproject.yml  PumpCtrl_PPQ_Ctrl.sct  test_hardware.c
PumpBoard_Car_PPQ1_Single_V0.0.0.2_2025.10.27/FWLIB/inc/: stm32f4xx_can.h  stm32f4xx_spi.h
PumpBoard_Car_PPQ1_Single_V0.0.0.2_2025.10.27/FWLIB/src/: stm32f4xx_can.c
PumpBoard_Car_PPQ1_Single_V0.0.0.2_2025.10.27/Function/: CheckTable.c  CheckTable.h  Diagnose.c  Diagnose.h  HengLiPumpCmd.h  PID.h  ParseFrame.c  ParseFrame.h  Task.c  Task.h  algorithm.c  algorithm.h  analog_input.c  application.c  application.h  can_protocol.c  can_protocol.h  deadzone_current.h  flash.c  flash.h  limit.c  limit.h  stm32f4xx_it.c  usb_protocol.c  usb_protocol.h
PumpBoard_Car_PPQ1_Single_V0.0.0.2_2025.10.27/HardWare_Init/Inc/: AD7689.h  Hw_ADC.h  Hw_CAN.h  Hw_SPI.h  gpio.h
PumpBoard_Car_PPQ1_Single_V0.0.0.2_2025.10.27/HardWare_Init/Src/: AD7689.c  Hw_ADC.c  Hw_CAN.c  Hw_GPIO.c  Hw_SPI.c  Hw_TIM.c  driver.c
PumpBoard_Car_PPQ1_Single_V0.0.0.2_2025.10.27/LIB/: Deadzone_Current.lib  PID_AREA.lib
PumpBoard_Car_PPQ1_Single_V0.0.0.2_2025.10.27/USER/: CODE_MAP.txt  CODE_UNDERSTANDING_GUIDE.md  DEBUG_GUIDE.md  DEPLOYMENT_CHECKLIST.md  HARDWARE_TEST_SUMMARY.md  PumpCtrl.cbuild-idx.yml  PumpCtrl.cbuild-pack.yml  PumpCtrl.csolution.yml  PumpCtrl.uvguix.26549  PumpCtrl.uvguix.m.gandhi  PumpCtrl.uvoptx  PumpCtrl.uvprojx  README_BUILD.md  RUN_HARDWARE_TEST.md  START_HERE.md  build.bat  debug.ini  explore_code.bat  flash.bat  main.c  main_test.c  run_test.bat
PumpBoard_Car_PPQ1_Single_V0.0.0.2_2025.10.27/USER/tmp/: .ninja_log  CMakeCache.txt  CMakeLists.txt  build.ninja  cmake_install.cmake  roots.cmake
PumpBoard_Car_PPQ1_Single_V0.0.0.2_2025.10.27/USER/tmp/1/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  compile_commands.json
PumpBoard_Car_PPQ1_Single_V0.0.0.2_2025.10.27/USER/tmp/PumpCtrl+PPQ_Ctrl/: CMakeLists.txt  groups.cmake  toolchain.cmake
PumpBoard_Car_PPQ1_Single_V0.0.0.2_2025.10.27/USER/tmp/PumpCtrl+PPQ_Ctrl/src/PumpCtrl+PPQ_Ctrl-stamp/: PumpCtrl+PPQ_Ctrl-configure-.cmake  PumpCtrl+PPQ_Ctrl-database-.cmake  PumpCtrl+PPQ_Ctrl-source_dirinfo.txt
PumpBoard_Car_PPQ1_Single_V0.0.0.2_2025.10.27/USER/tmp/PumpCtrl+PPQ_Ctrl/tmp/: PumpCtrl+PPQ_Ctrl-cfgcmd.txt  PumpCtrl+PPQ_Ctrl-mkdirs.cmake
PumpBoard_GUI/: .gitignore  CMakeLists.txt  README.md
PumpBoard_GUI/include/: controlpanelwidget.h  dashboardwidget.h  datalogger.h  gaugewidget.h  mainwindow.h  pidtuningwidget.h  pumpboard_protocol.h  realtimechartwidget.h  serialcommunication.h
PumpBoard_GUI/resources/: resources.qrc
PumpBoard_GUI/src/: controlpanelwidget.cpp  dashboardwidget.cpp  datalogger.cpp  gaugewidget.cpp  main.cpp  mainwindow.cpp  pidtuningwidget.cpp  realtimechartwidget.cpp  serialcommunication.cpp
PumpBoard_GUI/ui/: mainwindow.ui
STM32_PumpBoard_GUI/: gui_main.py  requirements.txt  serial_comm.py
non-requeired/: DEPLOYMENT_GUIDE.md  PumpBoard_PID_Monitor.mcuvproj
non-requeired/STM32_PumpBoard_GUI/: QUICKSTART.md  README.md  parameter_defs.py  run_gui.bat  run_gui.sh
non-requeired/pid_simulation_test/: CASCADE_TUNING_README.md  README.md  interactive_tuning.py  interactive_tuning_cascade.py  interactive_tuning_cascade_pyqt5.py  quick_start.py  simulation.py
non-requeired/pumpboard_pyqt5_simulation/: README.md  pumpboard_simulator.py  requirements.txt
pid_simulation_test/: .gitignore  README.md  interactive_tuning_cascade_pyqt5.py  pid_controller.py  plant_models.py  requirements.txt
pumpboard_pyqt5_simulation/: pid_controller.py  pump_plant_model.py  test_simulation.py
